load("@rules_cc//cc:defs.bzl", "cc_library")
load("//adventofcode/cc/tools:build_defs.bzl", "cc_aoc_benchmark", "cc_aoc_header", "cc_aoc_test")

[
    cc_aoc_header(
        day = day,
        part2 = day < 25,  # day 25 generally doesn't have a part 2
        year = 2022,
    )
    for day in range(
        1,
        25 + 1,  # +1 because range() is [start, end)
    )
]

cc_library(
    name = "day01",
    srcs = ["day01.cc"],
    hdrs = ["day01.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day01_test",
    library = ":day01",
    part1 = {
        "//adventofcode/data/year2022:day01.example.in": "//adventofcode/data/year2022:day01.example.part1.out",
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day01.example.in": "//adventofcode/data/year2022:day01.example.part2.out",
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day01_benchmark",
    library = ":day01",
    part1 = {
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part2.out",
    },
)

cc_library(
    name = "day02",
    srcs = ["day02.cc"],
    hdrs = ["day02.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day02_test",
    library = ":day02",
    part1 = {
        "//adventofcode/data/year2022:day02.example.in": "//adventofcode/data/year2022:day02.example.part1.out",
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day02.example.in": "//adventofcode/data/year2022:day02.example.part2.out",
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day02_benchmark",
    library = ":day02",
    part1 = {
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part2.out",
    },
)

cc_library(
    name = "day03",
    srcs = ["day03.cc"],
    hdrs = ["day03.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day03_test",
    library = ":day03",
    part1 = {
        "//adventofcode/data/year2022:day03.example.in": "//adventofcode/data/year2022:day03.example.part1.out",
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day03.example.in": "//adventofcode/data/year2022:day03.example.part2.out",
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day03_benchmark",
    library = ":day03",
    part1 = {
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part2.out",
    },
)

cc_library(
    name = "day04",
    srcs = ["day04.cc"],
    hdrs = ["day04.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_aoc_test(
    name = "day04_test",
    library = ":day04",
    part1 = {
        "//adventofcode/data/year2022:day04.example.in": "//adventofcode/data/year2022:day04.example.part1.out",
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day04.example.in": "//adventofcode/data/year2022:day04.example.part2.out",
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day04_benchmark",
    library = ":day04",
    part1 = {
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part2.out",
    },
)

cc_library(
    name = "day05",
    srcs = ["day05.cc"],
    hdrs = ["day05.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day05_test",
    library = ":day05",
    part1 = {
        "//adventofcode/data/year2022:day05.example.in": "//adventofcode/data/year2022:day05.example.part1.out",
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day05.example.in": "//adventofcode/data/year2022:day05.example.part2.out",
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day05_benchmark",
    library = ":day05",
    part1 = {
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part2.out",
    },
)

cc_library(
    name = "day06",
    srcs = ["day06.cc"],
    hdrs = ["day06.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day06_test",
    library = ":day06",
    part1 = {
        "//adventofcode/data/year2022:day06.example1.in": "//adventofcode/data/year2022:day06.example1.part1.out",
        "//adventofcode/data/year2022:day06.example2.in": "//adventofcode/data/year2022:day06.example2.part1.out",
        "//adventofcode/data/year2022:day06.example3.in": "//adventofcode/data/year2022:day06.example3.part1.out",
        "//adventofcode/data/year2022:day06.example4.in": "//adventofcode/data/year2022:day06.example4.part1.out",
        "//adventofcode/data/year2022:day06.example5.in": "//adventofcode/data/year2022:day06.example5.part1.out",
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day06.example1.in": "//adventofcode/data/year2022:day06.example1.part2.out",
        "//adventofcode/data/year2022:day06.example2.in": "//adventofcode/data/year2022:day06.example2.part2.out",
        "//adventofcode/data/year2022:day06.example3.in": "//adventofcode/data/year2022:day06.example3.part2.out",
        "//adventofcode/data/year2022:day06.example4.in": "//adventofcode/data/year2022:day06.example4.part2.out",
        "//adventofcode/data/year2022:day06.example5.in": "//adventofcode/data/year2022:day06.example5.part2.out",
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day06_benchmark",
    library = ":day06",
    part1 = {
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part2.out",
    },
)

cc_library(
    name = "day07",
    srcs = ["day07.cc"],
    hdrs = ["day07.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day07_test",
    library = ":day07",
    part1 = {
        "//adventofcode/data/year2022:day07.example.in": "//adventofcode/data/year2022:day07.example.part1.out",
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day07.example.in": "//adventofcode/data/year2022:day07.example.part2.out",
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day07_benchmark",
    library = ":day07",
    part1 = {
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part2.out",
    },
)

cc_library(
    name = "day08",
    srcs = ["day08.cc"],
    hdrs = ["day08.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day08_test",
    library = ":day08",
    part1 = {
        "//adventofcode/data/year2022:day08.example.in": "//adventofcode/data/year2022:day08.example.part1.out",
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day08.example.in": "//adventofcode/data/year2022:day08.example.part2.out",
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day08_benchmark",
    library = ":day08",
    part1 = {
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part2.out",
    },
)
