load("@rules_cc//cc:defs.bzl", "cc_library")
load("//adventofcode/cc/tools:build_defs.bzl", "cc_aoc_benchmark", "cc_aoc_header", "cc_aoc_test")

[
    cc_aoc_header(
        day = day,
        part2 = day < 25,  # day 25 generally doesn't have a part 2
        year = 2022,
    )
    for day in range(
        1,
        25 + 1,  # +1 because range() is [start, end)
    )
]

cc_library(
    name = "day01",
    srcs = ["day01.cc"],
    hdrs = ["day01.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day01_test",
    library = ":day01",
    part1 = {
        "//adventofcode/data/year2022:day01.example.in": "//adventofcode/data/year2022:day01.example.part1.out",
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day01.example.in": "//adventofcode/data/year2022:day01.example.part2.out",
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day01_benchmark",
    library = ":day01",
    part1 = {
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day01.real.in": "//adventofcode/data/year2022:day01.real.part2.out",
    },
)

cc_library(
    name = "day02",
    srcs = ["day02.cc"],
    hdrs = ["day02.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day02_test",
    library = ":day02",
    part1 = {
        "//adventofcode/data/year2022:day02.example.in": "//adventofcode/data/year2022:day02.example.part1.out",
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day02.example.in": "//adventofcode/data/year2022:day02.example.part2.out",
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day02_benchmark",
    library = ":day02",
    part1 = {
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day02.real.in": "//adventofcode/data/year2022:day02.real.part2.out",
    },
)

cc_library(
    name = "day03",
    srcs = ["day03.cc"],
    hdrs = ["day03.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day03_test",
    library = ":day03",
    part1 = {
        "//adventofcode/data/year2022:day03.example.in": "//adventofcode/data/year2022:day03.example.part1.out",
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day03.example.in": "//adventofcode/data/year2022:day03.example.part2.out",
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day03_benchmark",
    library = ":day03",
    part1 = {
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day03.real.in": "//adventofcode/data/year2022:day03.real.part2.out",
    },
)

cc_library(
    name = "day04",
    srcs = ["day04.cc"],
    hdrs = ["day04.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_aoc_test(
    name = "day04_test",
    library = ":day04",
    part1 = {
        "//adventofcode/data/year2022:day04.example.in": "//adventofcode/data/year2022:day04.example.part1.out",
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day04.example.in": "//adventofcode/data/year2022:day04.example.part2.out",
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day04_benchmark",
    library = ":day04",
    part1 = {
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day04.real.in": "//adventofcode/data/year2022:day04.real.part2.out",
    },
)

cc_library(
    name = "day05",
    srcs = ["day05.cc"],
    hdrs = ["day05.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day05_test",
    library = ":day05",
    part1 = {
        "//adventofcode/data/year2022:day05.example.in": "//adventofcode/data/year2022:day05.example.part1.out",
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day05.example.in": "//adventofcode/data/year2022:day05.example.part2.out",
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day05_benchmark",
    library = ":day05",
    part1 = {
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day05.real.in": "//adventofcode/data/year2022:day05.real.part2.out",
    },
)

cc_library(
    name = "day06",
    srcs = ["day06.cc"],
    hdrs = ["day06.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day06_test",
    library = ":day06",
    part1 = {
        "//adventofcode/data/year2022:day06.example1.in": "//adventofcode/data/year2022:day06.example1.part1.out",
        "//adventofcode/data/year2022:day06.example2.in": "//adventofcode/data/year2022:day06.example2.part1.out",
        "//adventofcode/data/year2022:day06.example3.in": "//adventofcode/data/year2022:day06.example3.part1.out",
        "//adventofcode/data/year2022:day06.example4.in": "//adventofcode/data/year2022:day06.example4.part1.out",
        "//adventofcode/data/year2022:day06.example5.in": "//adventofcode/data/year2022:day06.example5.part1.out",
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day06.example1.in": "//adventofcode/data/year2022:day06.example1.part2.out",
        "//adventofcode/data/year2022:day06.example2.in": "//adventofcode/data/year2022:day06.example2.part2.out",
        "//adventofcode/data/year2022:day06.example3.in": "//adventofcode/data/year2022:day06.example3.part2.out",
        "//adventofcode/data/year2022:day06.example4.in": "//adventofcode/data/year2022:day06.example4.part2.out",
        "//adventofcode/data/year2022:day06.example5.in": "//adventofcode/data/year2022:day06.example5.part2.out",
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day06_benchmark",
    library = ":day06",
    part1 = {
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day06.real.in": "//adventofcode/data/year2022:day06.real.part2.out",
    },
)

cc_library(
    name = "day07",
    srcs = ["day07.cc"],
    hdrs = ["day07.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day07_test",
    library = ":day07",
    part1 = {
        "//adventofcode/data/year2022:day07.example.in": "//adventofcode/data/year2022:day07.example.part1.out",
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day07.example.in": "//adventofcode/data/year2022:day07.example.part2.out",
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day07_benchmark",
    library = ":day07",
    part1 = {
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day07.real.in": "//adventofcode/data/year2022:day07.real.part2.out",
    },
)

cc_library(
    name = "day08",
    srcs = ["day08.cc"],
    hdrs = ["day08.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day08_test",
    library = ":day08",
    part1 = {
        "//adventofcode/data/year2022:day08.example.in": "//adventofcode/data/year2022:day08.example.part1.out",
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day08.example.in": "//adventofcode/data/year2022:day08.example.part2.out",
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day08_benchmark",
    library = ":day08",
    part1 = {
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day08.real.in": "//adventofcode/data/year2022:day08.real.part2.out",
    },
)

cc_library(
    name = "day09",
    srcs = ["day09.cc"],
    hdrs = ["day09.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_aoc_test(
    name = "day09_test",
    library = ":day09",
    part1 = {
        "//adventofcode/data/year2022:day09.example.in": "//adventofcode/data/year2022:day09.example.part1.out",
        "//adventofcode/data/year2022:day09.real.in": "//adventofcode/data/year2022:day09.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day09.example.in": "//adventofcode/data/year2022:day09.example.part2.out",
        "//adventofcode/data/year2022:day09.real.in": "//adventofcode/data/year2022:day09.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day09_benchmark",
    library = ":day09",
    part1 = {
        "//adventofcode/data/year2022:day09.real.in": "//adventofcode/data/year2022:day09.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day09.real.in": "//adventofcode/data/year2022:day09.real.part2.out",
    },
)

cc_library(
    name = "day10",
    srcs = ["day10.cc"],
    hdrs = ["day10.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day10_test",
    library = ":day10",
    part1 = {
        "//adventofcode/data/year2022:day10.example.in": "//adventofcode/data/year2022:day10.example.part1.out",
        "//adventofcode/data/year2022:day10.real.in": "//adventofcode/data/year2022:day10.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day10.example.in": "//adventofcode/data/year2022:day10.example.part2.out",
        "//adventofcode/data/year2022:day10.real.in": "//adventofcode/data/year2022:day10.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day10_benchmark",
    library = ":day10",
    part1 = {
        "//adventofcode/data/year2022:day10.real.in": "//adventofcode/data/year2022:day10.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day10.real.in": "//adventofcode/data/year2022:day10.real.part2.out",
    },
)

cc_library(
    name = "day11",
    srcs = ["day11.cc"],
    hdrs = ["day11.h"],
    deps = [
        "//adventofcode/cc:trim",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_aoc_test(
    name = "day11_test",
    library = ":day11",
    part1 = {
        "//adventofcode/data/year2022:day11.example.in": "//adventofcode/data/year2022:day11.example.part1.out",
        "//adventofcode/data/year2022:day11.real.in": "//adventofcode/data/year2022:day11.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day11.example.in": "//adventofcode/data/year2022:day11.example.part2.out",
        "//adventofcode/data/year2022:day11.real.in": "//adventofcode/data/year2022:day11.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day11_benchmark",
    library = ":day11",
    part1 = {
        "//adventofcode/data/year2022:day11.real.in": "//adventofcode/data/year2022:day11.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day11.real.in": "//adventofcode/data/year2022:day11.real.part2.out",
    },
)

cc_library(
    name = "day12",
    srcs = ["day12.cc"],
    hdrs = ["day12.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day12_test",
    library = ":day12",
    part1 = {
        "//adventofcode/data/year2022:day12.example.in": "//adventofcode/data/year2022:day12.example.part1.out",
        "//adventofcode/data/year2022:day12.real.in": "//adventofcode/data/year2022:day12.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day12.example.in": "//adventofcode/data/year2022:day12.example.part2.out",
        "//adventofcode/data/year2022:day12.real.in": "//adventofcode/data/year2022:day12.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day12_benchmark",
    library = ":day12",
    part1 = {
        "//adventofcode/data/year2022:day12.real.in": "//adventofcode/data/year2022:day12.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day12.real.in": "//adventofcode/data/year2022:day12.real.part2.out",
    },
)

cc_library(
    name = "day13",
    srcs = ["day13.cc"],
    hdrs = ["day13.h"],
    deps = [
        "//adventofcode/cc:trim",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day13_test",
    library = ":day13",
    part1 = {
        "//adventofcode/data/year2022:day13.example.in": "//adventofcode/data/year2022:day13.example.part1.out",
        "//adventofcode/data/year2022:day13.real.in": "//adventofcode/data/year2022:day13.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day13.example.in": "//adventofcode/data/year2022:day13.example.part2.out",
        "//adventofcode/data/year2022:day13.real.in": "//adventofcode/data/year2022:day13.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day13_benchmark",
    library = ":day13",
    part1 = {
        "//adventofcode/data/year2022:day13.real.in": "//adventofcode/data/year2022:day13.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day13.real.in": "//adventofcode/data/year2022:day13.real.part2.out",
    },
)

cc_library(
    name = "day14",
    srcs = ["day14.cc"],
    hdrs = ["day14.h"],
    deps = [
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_aoc_test(
    name = "day14_test",
    library = ":day14",
    part1 = {
        "//adventofcode/data/year2022:day14.example.in": "//adventofcode/data/year2022:day14.example.part1.out",
        "//adventofcode/data/year2022:day14.real.in": "//adventofcode/data/year2022:day14.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day14.example.in": "//adventofcode/data/year2022:day14.example.part2.out",
        "//adventofcode/data/year2022:day14.real.in": "//adventofcode/data/year2022:day14.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day14_benchmark",
    library = ":day14",
    part1 = {
        "//adventofcode/data/year2022:day14.real.in": "//adventofcode/data/year2022:day14.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day14.real.in": "//adventofcode/data/year2022:day14.real.part2.out",
    },
)

cc_library(
    name = "day15_shared",
    srcs = ["day15_shared.cc"],
    hdrs = ["day15_shared.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_library(
    name = "day15",
    srcs = ["day15.cc"],
    hdrs = ["day15.h"],
    deps = [
        ":day15_shared",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day15_test",
    library = ":day15",
    part1 = {
        "//adventofcode/data/year2022:day15.real.in": "//adventofcode/data/year2022:day15.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day15.real.in": "//adventofcode/data/year2022:day15.real.part2.out",
    },
)

cc_library(
    name = "day15_example",
    srcs = ["day15_example.cc"],
    hdrs = ["day15_example.h"],
    deps = [
        ":day15_shared",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day15_example_test",
    library = ":day15_example",
    part1 = {
        "//adventofcode/data/year2022:day15.example.in": "//adventofcode/data/year2022:day15.example.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day15.example.in": "//adventofcode/data/year2022:day15.example.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day15_benchmark",
    library = ":day15",
    part1 = {
        "//adventofcode/data/year2022:day15.real.in": "//adventofcode/data/year2022:day15.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day15.real.in": "//adventofcode/data/year2022:day15.real.part2.out",
    },
)

cc_library(
    name = "day16",
    srcs = ["day16.cc"],
    hdrs = ["day16.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_aoc_test(
    name = "day16_test",
    library = ":day16",
    part1 = {
        "//adventofcode/data/year2022:day16.example.in": "//adventofcode/data/year2022:day16.example.part1.out",
        "//adventofcode/data/year2022:day16.real.in": "//adventofcode/data/year2022:day16.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day16.example.in": "//adventofcode/data/year2022:day16.example.part2.out",
        "//adventofcode/data/year2022:day16.real.in": "//adventofcode/data/year2022:day16.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day16_benchmark",
    library = ":day16",
    part1 = {
        "//adventofcode/data/year2022:day16.real.in": "//adventofcode/data/year2022:day16.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day16.real.in": "//adventofcode/data/year2022:day16.real.part2.out",
    },
)

cc_library(
    name = "day17",
    srcs = ["day17.cc"],
    hdrs = ["day17.h"],
    deps = [
        "//adventofcode/cc:trim",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day17_test",
    library = ":day17",
    part1 = {
        "//adventofcode/data/year2022:day17.example.in": "//adventofcode/data/year2022:day17.example.part1.out",
        "//adventofcode/data/year2022:day17.real.in": "//adventofcode/data/year2022:day17.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day17.example.in": "//adventofcode/data/year2022:day17.example.part2.out",
        "//adventofcode/data/year2022:day17.real.in": "//adventofcode/data/year2022:day17.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day17_benchmark",
    library = ":day17",
    part1 = {
        "//adventofcode/data/year2022:day17.real.in": "//adventofcode/data/year2022:day17.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day17.real.in": "//adventofcode/data/year2022:day17.real.part2.out",
    },
)

cc_library(
    name = "day18",
    srcs = ["day18.cc"],
    hdrs = ["day18.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_aoc_test(
    name = "day18_test",
    library = ":day18",
    part1 = {
        "//adventofcode/data/year2022:day18.example.in": "//adventofcode/data/year2022:day18.example.part1.out",
        "//adventofcode/data/year2022:day18.real.in": "//adventofcode/data/year2022:day18.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day18.example.in": "//adventofcode/data/year2022:day18.example.part2.out",
        "//adventofcode/data/year2022:day18.real.in": "//adventofcode/data/year2022:day18.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day18_benchmark",
    library = ":day18",
    part1 = {
        "//adventofcode/data/year2022:day18.real.in": "//adventofcode/data/year2022:day18.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day18.real.in": "//adventofcode/data/year2022:day18.real.part2.out",
    },
)

cc_library(
    name = "day20",
    srcs = ["day20.cc"],
    hdrs = ["day20.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day20_test",
    library = ":day20",
    part1 = {
        "//adventofcode/data/year2022:day20.example.in": "//adventofcode/data/year2022:day20.example.part1.out",
        "//adventofcode/data/year2022:day20.real.in": "//adventofcode/data/year2022:day20.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day20.example.in": "//adventofcode/data/year2022:day20.example.part2.out",
        "//adventofcode/data/year2022:day20.real.in": "//adventofcode/data/year2022:day20.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day20_benchmark",
    library = ":day20",
    part1 = {
        "//adventofcode/data/year2022:day20.real.in": "//adventofcode/data/year2022:day20.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day20.real.in": "//adventofcode/data/year2022:day20.real.part2.out",
    },
)

cc_library(
    name = "day23",
    srcs = ["day23.cc"],
    hdrs = ["day23.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_aoc_test(
    name = "day23_test",
    library = ":day23",
    part1 = {
        "//adventofcode/data/year2022:day23.example.in": "//adventofcode/data/year2022:day23.example.part1.out",
        "//adventofcode/data/year2022:day23.real.in": "//adventofcode/data/year2022:day23.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day23.example.in": "//adventofcode/data/year2022:day23.example.part2.out",
        "//adventofcode/data/year2022:day23.real.in": "//adventofcode/data/year2022:day23.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day23_benchmark",
    library = ":day23",
    part1 = {
        "//adventofcode/data/year2022:day23.real.in": "//adventofcode/data/year2022:day23.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day23.real.in": "//adventofcode/data/year2022:day23.real.part2.out",
    },
)

cc_library(
    name = "day24",
    srcs = ["day24.cc"],
    hdrs = ["day24.h"],
    deps = [
        "//adventofcode/cc/geometry:pos",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day24_test",
    library = ":day24",
    part1 = {
        "//adventofcode/data/year2022:day24.example.in": "//adventofcode/data/year2022:day24.example.part1.out",
        "//adventofcode/data/year2022:day24.real.in": "//adventofcode/data/year2022:day24.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day24.example.in": "//adventofcode/data/year2022:day24.example.part2.out",
        "//adventofcode/data/year2022:day24.real.in": "//adventofcode/data/year2022:day24.real.part2.out",
    },
)

cc_aoc_benchmark(
    name = "day24_benchmark",
    library = ":day24",
    part1 = {
        "//adventofcode/data/year2022:day24.real.in": "//adventofcode/data/year2022:day24.real.part1.out",
    },
    part2 = {
        "//adventofcode/data/year2022:day24.real.in": "//adventofcode/data/year2022:day24.real.part2.out",
    },
)

cc_library(
    name = "day25",
    srcs = ["day25.cc"],
    hdrs = ["day25.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_aoc_test(
    name = "day25_test",
    library = ":day25",
    part1 = {
        "//adventofcode/data/year2022:day25.example.in": "//adventofcode/data/year2022:day25.example.part1.out",
        "//adventofcode/data/year2022:day25.real.in": "//adventofcode/data/year2022:day25.real.part1.out",
    },
)

cc_aoc_benchmark(
    name = "day25_benchmark",
    library = ":day25",
    part1 = {
        "//adventofcode/data/year2022:day25.real.in": "//adventofcode/data/year2022:day25.real.part1.out",
    },
)
