load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//docker/go:image_with_ports.bzl", "go_image_with_ports")

go_library(
    name = "httpserver_lib",
    srcs = ["main.go"],
    importpath = "go.saser.se/docker/dockertest/httpserver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "httpserver",
    embed = [":httpserver_lib"],
    visibility = ["//visibility:public"],
)

go_image_with_ports(
    name = "httpserver_image",
    binary = ":httpserver",
    ports = ["8080/tcp"],
    visibility = ["//visibility:public"],
)
