load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "klogadapter",
    srcs = ["klogadapter.go"],
    importpath = "go.saser.se/postgres/log/klogadapter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//tracelog",
        "@io_k8s_klog_v2//:klog",
    ],
)
