load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//docker/go:image_with_ports.bzl", "go_image_with_ports")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "go.saser.se/tasks/fake/server",
    visibility = ["//visibility:private"],
    deps = [
        "//tasks/fake",
        "//tasks/tasks_go_proto",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//grpclog/glogger",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image_with_ports(
    name = "server_image",
    binary=":server",
    ports = ["8080/tcp"],
)
