load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "go.saser.se/tasks/fake/server",
    visibility = ["//visibility:private"],
    deps = [
        "//grpclog/klogger",
        "//tasks/fake",
        "//tasks/tasks_go_proto",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
